copied blog template

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,10 +1,9 @@
 ---
-name: Tails Azimuth
+name: Robert Woodhams
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
+occupation: Software Engineer
+company: Woodhams Software
+email: robbiewoodhams643@gmail.com
 linkedin: https://www.linkedin.com
 github: https://github.com
 ---
