--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -4,12 +4,14 @@ avatar: /static/images/avatar.png
 occupation: Software Engineer
 company: Woodhams Software
 email: robbiewoodhams643@gmail.com
-linkedin: https://www.linkedin.com
-github: https://github.com
+linkedin: https://www.linkedin.com/in/robbie-woodhams-026135285?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+github: https://github.com/robbiewoodhams1
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+I’m Robert Woodhams, a First-Class Computer Science graduate from the University of Plymouth and founder of several software ventures including Standard Cyber, HouseFlow, TradeFlow, and Woodhams Software.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+As a full-stack engineer, I specialise in building scalable, production-ready systems using React Native, Next.js, Node.js, and Supabase, with a focus on clean architecture, automation, and user experience. I’ve architected modular SaaS platforms, mobile apps with active user bases, and CI/CD-driven deployments through Docker and GitHub Actions.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+My work bridges software engineering and entrepreneurship from designing intuitive UIs and integrating secure payment systems, to developing microservices and containerised infrastructures. I’m particularly passionate about cybersecurity and building tools that empower businesses through technology.
+
+When I’m not coding, I enjoy exploring new technologies, refining my systems, and sharing my journey of turning ideas into fully realised digital products.
