blog: create mobile app

--- a/data/blog/web-app/create-web-app.mdx
+++ b/data/blog/web-app/create-web-app.mdx
@@ -1,10 +1,14 @@
 ---
 title: How to create a website / web app
 date: '2025-10-13'
-tags: ['web app', 'website', 'nextjs', 'how to']
+tags: ['Web App', 'Website', 'NextJS', 'How To']
 draft: false
-summary: How to create a website / web app using next.js
+summary: How to create a website / web app using Next.JS
 ---
+
+# Overview
+
+In this tutorial we will cover how to make a webapp / website using NextJS. NextJS is a React framework that is used to build web applications using JavaScript. In subsequent tutorials we will go through hosting, styling and features, however each web app no matter how big or small begins this way when using NextJS. Lets get started.
 
 # 1.0 Prerequisites
 
