blog: upload to google play

--- a/data/blog/web-app/hosting-on-vercel.mdx
+++ b/data/blog/web-app/hosting-on-vercel.mdx
@@ -12,7 +12,7 @@ In this tutorial we will cover how to host a webapp / website using Vercel. Verc
 
 # 1.0 Prerequisites
 
-Before you can host on vercel you need to create an account, and have a NextJS project committed to GitHub. It doesnt need to be NextJS but following the previous blog posts thats what we will cover.
+Before you can host on vercel you need to create an account, and have a NextJS project committed to GitHub. Click here to see [How to Create a Web App](https://blog.woodhamssoftware.com/blog/web-app/create-web-app). It doesnt need to be NextJS but following the previous blog posts thats what we will cover.
 
 https://vercel.com/
 
